correct final temlate

--- a/presalesite/design/templates/design/design_final.html
+++ b/presalesite/design/templates/design/design_final.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-    <h6 style="margin-left:20px; font-weight: bold; cursor: pointer;" >В расчет добавлены следующие записи:</h6>
+    <h6 style="margin-left:20px; margin-top:25px; font-weight: bold; cursor: pointer;" >В расчет добавлены следующие записи:</h6>
 
     <body>
         <table style="border-collapse: collapse; margin-left:20px;">
