--- a/presalesite/poc/templates/poc/poc_list.html
+++ b/presalesite/poc/templates/poc/poc_list.html
@@ -12,7 +12,7 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Стендирование
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Стендирование" name="Стендирование" required />
+      <input type="number" step="0.1" id="Стендирование" name="Стендирование" placeholder="кол-во дней" style="width: 120px;" required />
       </summary>
       <ul>
         <li class="item1">
