--- a/presalesite/poc/templates/poc/poc_list.html
+++ b/presalesite/poc/templates/poc/poc_list.html
@@ -12,49 +12,49 @@
       <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
       >Стендирование
       <label for="float-input" style="margin-left:60px;">Трудозатраты, дней:</label>
-      <input type="number" step="0.1" id="Стендирование" name="Стендирование" placeholder="кол-во дней" style="width: 120px;" required />
-      </summary>
+      <input type="number" step="0.1" id="Стендирование" name="Стендирование" placeholder="кол-во дней" style="width: 120px;" required value="{{ pocs.0.days }}"/>
+    </summary>
       <ul>
         <li class="item1">
           <details style="background-color: rgb(172, 165, 165);">
             <summary style="margin-left:40px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Стендирование и валидация решения" value="Стендирование и валидация решения">
+              <input type="checkbox" style="margin-right:5px;" class="list-item-checkbox" name="Стендирование и валидация решения" value="Стендирование и валидация решения" {% if 'Стендирование и валидация решения' in names %} checked {% endif %}>
               Стендирование и валидация решения
             </summary> 
             <ul>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Разработка программы испытания решения" value="Разработка программы испытания решения">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Разработка программы испытания решения" value="Разработка программы испытания решения" {% if 'Разработка программы испытания решения' in names %} checked {% endif %}>
                     Разработка программы испытания решения
                   </summary>
                 </li>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Сборка стенда на оборудовании и в помещении Заказчика" value="Сборка стенда на оборудовании и в помещении Заказчика">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Сборка стенда на оборудовании и в помещении Заказчика" value="Сборка стенда на оборудовании и в помещении Заказчика" {% if 'Сборка стенда на оборудовании и в помещении Заказчика' in names %} checked {% endif %}>
                     Сборка стенда на оборудовании и в помещении Заказчика
                   </summary>
               </li>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Сборка стенда на оборудовании Заказчика и в помещении Исполнителя" value="Сборка стенда на оборудовании Заказчика и в помещении Исполнителя">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Сборка стенда на оборудовании Заказчика и в помещении Исполнителя" value="Сборка стенда на оборудовании Заказчика и в помещении Исполнителя" {% if 'Сборка стенда на оборудовании Заказчика и в помещении Исполнителя' in names %} checked {% endif %}>
                     Сборка стенда на оборудовании Заказчика и в помещении Исполнителя
                   </summary>
               </li>
               <li>
                   <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Сборка виртуального стенда на виртуальном оборудовани Заказчика" value="Сборка виртуального стенда на виртуальном оборудовани Заказчика">
+                    <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Сборка виртуального стенда на виртуальном оборудовани Заказчика" value="Сборка виртуального стенда на виртуальном оборудовани Заказчика" {% if 'Сборка виртуального стенда на виртуальном оборудовани Заказчика' in names %} checked {% endif %}>
                     Сборка виртуального стенда на виртуальном оборудовани Заказчика
                   </summary>
               </li>
               <li>
                 <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Сборка виртуального стенда на виртуальном оборудовани Исполнителя" value="Сборка виртуального стенда на виртуальном оборудовани Исполнителя">
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Сборка виртуального стенда на виртуальном оборудовани Исполнителя" value="Сборка виртуального стенда на виртуальном оборудовани Исполнителя" {% if 'Сборка виртуального стенда на виртуальном оборудовани Исполнителя' in names %} checked {% endif %}>
                   Сборка виртуального стенда на виртуальном оборудовани Исполнителя
                 </summary>
               </li>
             <li>
                 <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Проведение испытания решения" value="Проведение испытания решения">
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="Проведение испытания решения" value="Проведение испытания решения" {% if 'Проведение испытания решения' in names %} checked {% endif %}>
                   Проведение испытания решения
                 </summary>
             </li>
